# nbbuilder

./: CMakeLists.txt  build.sh
algorithms/: CMakeLists.txt  algorithms.cpp  behavior.cpp  miscfuncs.cpp  step.cpp
cmake/modules/: FindBOOST_GRAPH.cmake  FindBOOST_REGEX.cmake
include/: algorithms.h  behavior.h  miscfuncs.h  step.h  trace.h  vis.h
tools/: CMakeLists.txt
tools/nbbuilder/: CMakeLists.txt  main.cpp
